--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "inquirer": "^8.2.4",
     "nodemon": "^2.0.20",
     "ts-node": "^8.10.2"
   },
   "scripts": {
-    "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node src/index.ts"
+    "watch": "nodemon"
   }
 }
